added swagger with route
