# docs/swagger.json
@@ -20,7 +20,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Song"
+                            "$ref": "#/definitions/models.CreateSongParams"
                         }
                     }
                 ],
@@ -233,6 +233,17 @@
         }
     },
     "definitions": {
+        "models.CreateSongParams": {
+            "type": "object",
+            "properties": {
+                "group": {
+                    "type": "string"
+                },
+                "song": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Song": {
             "type": "object",
             "properties": {
